test/vm/fails/key_size_overflow.js

var map = {};
map["A3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964A.A3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964A.A3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964A.A3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964A.A3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964AA3D6C7817001F48946270CD00CE1EA2105F470F65DA66C1FBCAADE3E7CAB964A."] = 1;
